objects/pse__Mass_Link_PTA_UI_Settings__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Custom settings related to mass link project task assignments with resource request and assignment</description>
    <fields>
        <fullName>pse__Assignment_Custom_Lookup_Field_Set__c</fullName>
        <defaultValue>&quot;Assignment_Custom_Lookup_Column&quot;</defaultValue>
        <description>The API name of the field set containing the fields to show in the assignment lookup popup. The field set must exist on the Assignment object.</description>
        <inlineHelpText>The API name of the field set containing the fields to show in the assignment lookup popup. The field set must exist on the Assignment object.</inlineHelpText>
        <label>Assignment Custom Lookup Field Set</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Custom_Field_Set_Name__c</fullName>
        <defaultValue>&apos;MassLinkUIDisplayFields&apos;</defaultValue>
        <description>Determines the name of a custom created field set containing the fields to be displayed in the mass link UI for project task assignments. If no name is set, the default field set is used.</description>
        <inlineHelpText>Determines the name of a custom created field set containing the fields to be displayed in the mass link UI for project task assignments. If no name is set, the default field set is used.</inlineHelpText>
        <label>Custom Field Set Name</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pse__Resource_Request_Lookup_Field_Set__c</fullName>
        <defaultValue>&quot;Resource_Request_Lookup_Field_Set&quot;</defaultValue>
        <description>The API name of the field set containing the fields to show in the resource request lookup popup. The field set must exist on the Resource Request object.</description>
        <inlineHelpText>The API name of the field set containing the fields to show in the resource request lookup popup. The field set must exist on the Resource Request object.</inlineHelpText>
        <label>Resource Request Lookup Field Set</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>Mass Link PTA UI Settings</label>
</CustomObject>